@@ -77,6 +77,7 @@ Bug fixes:
 - standard reference fixed: mkdir mode parameter is required since PHP 4.0.0 and not 4.2.0 (it became optional)
 - multiple reports may now be appended in the same report file
 - fixed phpunit-growl.xml configuration file: display icons to both pear or stand-alone installation
+- avoid php warnings when argument to list command (of CLI tool) is invalid (requires Console_CommandLine 1.2.0 or better)
 "
 
 [require]
@@ -85,7 +86,7 @@ pearinstaller = 1.9.0
 
 components.ez.no/Base = 1.8
 components.ez.no/ConsoleTools = 1.6.1
-pear.php.net/Console_CommandLine = 1.1.3
+pear.php.net/Console_CommandLine = 1.2.0
 bartlett.laurent-laville.org/PHP_Reflect = 1.4.2
 
 ext/dom =
