@@ -23,8 +23,8 @@ content of dictionary references.
   <email />
   <active>yes</active>
  </contributor>
- <date>2012-10-24</date>
- <time>23:50:07</time>
+ <date>2012-10-25</date>
+ <time>14:21:39</time>
  <version>
   <release>2.9.0</release>
   <api>2.9.0</api>
@@ -58,6 +58,7 @@ Bug fixes:
 - standard reference fixed: mkdir mode parameter is required since PHP 4.0.0 and not 4.2.0 (it became optional)
 - multiple reports may now be appended in the same report file
 - fixed phpunit-growl.xml configuration file: display icons to both pear or stand-alone installation
+- avoid php warnings when argument to list command (of CLI tool) is invalid (requires Console_CommandLine 1.2.0 or better)
  </notes>
  <contents>
   <dir baseinstalldir="Bartlett" name="/">
@@ -1276,7 +1277,7 @@ Bug fixes:
    <package>
     <name>Console_CommandLine</name>
     <channel>pear.php.net</channel>
-    <min>1.1.3</min>
+    <min>1.2.0</min>
    </package>
    <package>
     <name>PHP_Reflect</name>
@@ -1344,7 +1345,7 @@ Bug fixes:
     <release>stable</release>
     <api>stable</api>
    </stability>
-   <date>2012-10-24</date>
+   <date>2012-10-25</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
    <notes>
 Additions and changes:
@@ -1370,6 +1371,7 @@ Bug fixes:
 - standard reference fixed: mkdir mode parameter is required since PHP 4.0.0 and not 4.2.0 (it became optional)
 - multiple reports may now be appended in the same report file
 - fixed phpunit-growl.xml configuration file: display icons to both pear or stand-alone installation
+- avoid php warnings when argument to list command (of CLI tool) is invalid (requires Console_CommandLine 1.2.0 or better)
    </notes>
   </release>
   <release>
